1997-11-26  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am (libgslrandom_a_SOURCES): added gauss.o, poisson.o
	and exponential.o so that the basic distributions are available.
