@@ -1,4 +1,6 @@
 /* gsl_ran_switch.h */
+#ifndef gsl_ran_SWITCH_H 
+#define gsl_ran_SWITCH_H 
 void gsl_ran_use_default(void);
 void gsl_ran_use_taus(void);
 void gsl_ran_use_mrg(void);
@@ -7,3 +9,4 @@ void gsl_ran_use_uni(void);
 void gsl_ran_use_uni32(void);
 void gsl_ran_use_zuf(void);
 void gsl_ran_use_rand(void);
+#endif
