@@ -1,3 +1,9 @@
+Thu Jun 11 12:01:54 1998  Brian Gough  <bjg@vvv.lanl.gov>
+
+	* xxx-switch.xc: eliminated the need for string.h and strdup() by
+ 	making the generator names into const strings (it probably would
+ 	have been undesirable to allow the user to modify them anyway).
+	
 1997-11-26  Mark Galassi  <rosalia@cygnus.com>
 
 	* Makefile.am (libgslrandom_a_SOURCES): added gauss.o, poisson.o
